--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dashboard -- webpack-dev-server",
     "test": "jasmine",
     "repl": "babel-node",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d build"
   },
   "author": "Ada Developers Academy <contact@adadevelopersacademy.org>",
   "license": "MIT",
