--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "jquery": "^3.1.1",
     "webpack": "^1.13.3",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^2.4.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "webpack-merge": "^2.4.0"
+    "babel-polyfill": "^6.16.0"
   }
 }
