--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jasmine",
     "repl": "babel-node",
     "build": "webpack",
-    "deploy": "gh-pages -d build -o laurenfb"
+    "deploy": "gh-pages -d build"
   },
   "author": "Lauren F. Brink <laurenfriesbrink@gmail.com",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "webpack-merge": "^2.4.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0"
+    "babel-polyfill": "^6.16.0",
+    "gh-pages": "^0.12.0"
   }
 }
